objects/ssot__BenefitScheduleAssignment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BenefitAssignmentId__c</fullName>
        <label>Benefit Assignment</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitScheduleId__c</fullName>
        <label>Benefit Schedule</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Benefit Schedule Assignment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726626768_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitScheduleAssignment_BenefitSch_rel</label>
        <referenceTo>ssot__BenefitSchedule__dlm</referenceTo>
        <relationshipLabel>BenefitScheduleAssignment_BenefitSch_rel</relationshipLabel>
        <relationshipName>rel_1716726626768_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726641812_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitScheduleAssignment_BenefitAss_rel</label>
        <referenceTo>ssot__BenefitAssignment__dlm</referenceTo>
        <relationshipLabel>BenefitScheduleAssignment_BenefitAss_rel</relationshipLabel>
        <relationshipName>rel_1716726641812_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>